test/tests/stages/5_local_variables/valid/return_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(2)
  ;
  return
  identifier(a)
  ;
  }
