test/tests/stages/5_local_variables/invalid_semantics/invalid_lvalue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(2)
  ;
  identifier(a)
  +
  const int(3)
  =
  const int(4)
  ;
  return
  identifier(a)
  ;
  }
